fixes modal message color in dark mode

--- a/assets/css/style_dark.css
+++ b/assets/css/style_dark.css
@@ -2,3 +2,7 @@ html, body {
     background-color: #222;
     color: white;
 }
+
+.modal-title, .modal-body {
+    color: black;
+}
